--- a/practice_1/index.html
+++ b/practice_1/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>My test page</title>
+    <link rel="stylesheet" href="styles/style.css" />
+    <link
+      ref="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Open+Sans"
+    />
   </head>
   <body>
     <h1>Mozilla is cool</h1>
-    <img src="images/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
+    <img
+      src="images/firefox-icon.png"
+      alt="The Firefox logo: a flaming fox surrounding the Earth."
+    />
 
     <p>At Mozilla, we’re a global community of</p>
 
@@ -16,8 +24,21 @@
       <li>builders</li>
     </ul>
 
-    <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
+    <p>
+      working together to keep the Internet alive and accessible, so people
+      worldwide can be informed contributors and creators of the Web. We believe
+      this act of human collaboration across an open platform is essential to
+      individual growth and our collective future.
+    </p>
 
-    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
+    <p>
+      Read the
+      <a href="https://www.mozilla.org/en-US/about/manifesto/"
+        >Mozilla Manifesto</a
+      >
+      to learn even more about the values and principles that guide the pursuit
+      of our mission.
+    </p>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
